--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^5.3.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.0"
