--- a/ui/package.json
+++ b/ui/package.json
@@ -5,12 +5,11 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.11.2",
-    "react-scripts": "^5.0.0"
+    "react-router-dom": "^6.11.2"
   },
   "main": "/index.js",
   "devDependencies": {
-    "react-scripts": "1.0.0"
+    "react-scripts": "^1.1.5"
   },
   "name": "1nm4ok",
   "description": null,
