--- a/ui/package.json
+++ b/ui/package.json
@@ -2,23 +2,32 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.9.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "webpack-dev-server": "^4.15.1"
   },
   "main": "/index.js",
   "devDependencies": {
-    "react-scripts": "^1.1.5"
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.5.3",
+    "react-scripts": "^1.1.5",
+    "ts-loader": "^9.5.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "name": "1nm4ok",
   "description": null,
   "version": "0.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "npx webpack serve",
+    "build": "npx webpack"
   },
   "browserslist": {
     "production": [
