--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
     "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.11.2",
     "webpack-dev-server": "^4.15.1"
   },
